Closed
Bug 413718
Opened 17 years ago
Closed 16 years ago
Warning indicates cache problems: "Never ran into the same child that we started from"
Categories
(Core :: Disability Access APIs, defect)
Core
Disability Access APIs
Tracking
()
RESOLVED
FIXED
People
(Reporter: aaronlev, Assigned: aaronlev)
References
Details
(Keywords: access, Whiteboard: [not needed for 1.9])
Attachments
(1 file)
1.69 KB,
patch
|
evan.yan
:
review+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
I have seen this warning in the console. This and any other cache warnings need investigation because they lead to problems and potentially crashes.
Assignee | ||
Comment 1•17 years ago
|
||
Attachment #298858 -
Flags: review?(Evan.Yan)
Attachment #298858 -
Flags: review?(Evan.Yan) → review+
Assignee | ||
Updated•17 years ago
|
Attachment #298858 -
Flags: approval1.9?
Comment 2•17 years ago
|
||
Comment on attachment 298858 [details] [diff] [review]
1) Fix error checking, 2) Fix legit error where we set the first child of an outer doc to null, but don't reset the child's parent
a=beltzner for 1.9
Attachment #298858 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Updated•17 years ago
|
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
This problem still exists.
Step to reproduce, open 4 empty tabs, and then close the 2nd and 3rd tab.
It might be some problem with nsXULTabAccessible.
I didn't see any impact to user yet.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
It's a problem of the cached children list with async events.
If the children list had not been cached before one child was removed, then when we fires children-changed:remove event, we can't find it in the children list.
Because the children list is lazy generated after the removal.
It doesn't impact AT user, because when AT is running, the children list usually is cached earlier.
Assignee | ||
Comment 5•17 years ago
|
||
There was a crash that the NVDA developers found which involved opening about:blank in tabs. I don't remember the bug number.
Comment 6•17 years ago
|
||
(1.9 triage) Looks like the patch was approved and landed, but didn't fix the bug.
Whiteboard: [missed 1.9 checkin]
Updated•17 years ago
|
Whiteboard: [missed 1.9 checkin] → [not needed for 1.9]
I think the patch did fix some problems.
Currently, I don't think this bug blocks Firefox 3.
Assignee | ||
Comment 8•16 years ago
|
||
I haven't heard of the NVDA crash in a long time, and haven't seen anything on crash-stats. I think this bug is probably fixed now.
Let's just open up a new bug if we see a problem again. This is just going to linger around the bug database collecting dust.
Status: REOPENED → RESOLVED
Closed: 17 years ago → 16 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•