Bug 413718. Warning indicates cache problem. Never ran into same child we started from. r=evan, a=beltzner